# usb_system

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Start.bat  alembic.ini  app.db  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: release.yml
app/: config.py  db.py  main.py  models.py  schemas.py  sync.py
app/crud/: __init__.py  bookings.py  clients.py  maintenance.py  reminders.py  trips.py  vehicles.py
app/routes/: __init__.py  bookings.py  clients.py  home.py  sync.py  trips.py
app/services/: audit.py  backups.py  dedupe.py  phone.py  sync.py
app/static/css/: app.css
app/static/js/: app.js
app/templates/: base.html  home.html
app/templates/auth/: agent_dashboard.html  ceo_dashboard.html  client_dashboard.html  login.html
app/templates/bookings/: detail.html  list.html  new.html
app/templates/clients/: _bookings.html  detail.html  list.html  merge.html  new.html
app/templates/trips/: detail.html  list.html  new.html
config/: app.env.sample
data/: astraion.db
data/backups/: 20250825-1344.db  20250825-1533.db  20250825-1606.db
migrations/: README.md  env.py
migrations/versions/: 0001_add_vehicle_maintenance_reminder_tables.py
packaging/: build.spec
scripts/: backup_db.py  init_db.py  peek_client.py
static/css/: app.css
static/js/: saved_views.js
tests/: test_api_contract.py  test_backups.py  test_bookings.py  test_clients.py  test_dedupe.py  test_export.py  test_maintenance.py  test_reminders.py  test_vehicles.py
